@@ -1,5 +1,3 @@
-MEDIUM_SUPPORTED = demo
-
 # No kernel image is needed for the demo.
 # FIXME:
 # linux-kernel-di does not yet generate uniquely named kernel files.
@@ -11,3 +9,6 @@ KERNELNAME =
 
 # No files in DEST.
 TARGET = $(STAMPS)tree-demo-stamp
+
+# HACK Alert: pkg-lists/ is still sorted by TYPE instead of a dir hierarchy.
+TYPE = demo
